# Learn-to-play

./: CMakeLists.txt  READ-ME
src/: main.cpp
src/Chords/: ChordRecognizer.cpp  ChordRecognizer.h
src/audio/: AudioCapture.cpp  AudioCapture.h
